# HW2

./: HW2-1_constrained_solvers.ipynb  HW2-2_application.ipynb  README.md  environment.yml
myoptim/: README.md  pyproject.toml
myoptim/myoptim/: solver.py  solver_nlp.py
myoptim/mytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
myoptim/tests/: test_solver.py  test_solver_nlp.py
